--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
+  font-family: sans-serif;
+  display: flex;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -30,4 +34,64 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background-color: #282c34;
+}
+
+#list-container {
+  width: 400px;
+  margin: auto;
+}
+
+#list-container ul {
+  padding: 0;
+  list-style: none;
+}
+
+#list-container ul li {
+  padding: 5px;
+  font-size: 24px;
+  background-color: #61dafb;
+  color: black;
+  margin-bottom: 2px;
+  overflow: auto;
+  height: fit-content;
+}
+
+#list-container input {
+  width: 100%;
+  height: 35px;
+}
+
+
+input {
+  display: block;
+  min-width: 90%;
+  margin: 1em;
+  padding: 1em;
+  width: 35em;
+  border-radius: 8px;
+  border-style: none;
+  border: 1px solid #e4e6e8;
+  transition: 0.1s ease;
+}
+
+input:hover {
+  border-color: palevioletred;
+}
+
+button {
+  margin: 0.8em;
+  padding: 1em;
+  border: 1px solid #e4e6e8;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.1s ease-in;
+}
+
+button:hover {
+  background-color: palevioletred;
+  color: white;
 }
