--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   flex-direction: column;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
@@ -34,7 +34,7 @@
   to {
     transform: rotate(360deg);
   }
-}
+} 
 
 body {
   background-color: #282c34;
@@ -95,3 +95,4 @@ button:hover {
   background-color: palevioletred;
   color: white;
 }
+ */
